# magmon

./: .env  .pre-commit-config.yaml  ADMIN_GAME_MANAGEMENT_PLAN.md  ADMIN_RESET_PLAN.md  DECK_VERSIONING.md  DECK_VERSIONING_PLAN.md  DEV_PROCESS_IMPROVEMENT_PLAN.md  PROGRESS_UPDATE_2025-05-02.md  PROJECT_ARCHITECTURE_PLAN.md  PROJECT_IMPROVEMENTS_SUMMARY.md  PROJECT_IMPROVEMENT_PLAN.md  TESTING_VERIFICATION_PLAN.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  wsgi.py
backend/: .coverage  .gitignore  Dockerfile  check_registrations.py  check_winners.py  delete_matches.py  pyproject.toml  requirements.txt  set_admin.py  setup_venv.sh  wsgi.py
backend/app/: __init__.py  config.py  models.py
backend/app/api/: __init__.py  admin.py  auth.py  routes.py
backend/migrations/: env.py
backend/migrations/versions/: 7800133a9ad6_add_approval_notes_to_match.py  add_admin_and_password_reset_fields.py  add_admin_audit_logs_table.py  add_game_soft_delete_columns.py  b1c4068237c6_add_profile_fields_to_user_model.py  c92f19bc96aa_add_deck_versioning.py  caebb3d6cb25_merge_admin_and_deck_versioning_branches.py  (+2 more)
backend/scripts/: backfill_deck_versions.py  check_reg_versions.py
backend/tests/: test_admin_audit_log_model.py  test_basic.py  test_deck_model.py  test_deck_routes.py  test_deck_schemas.py  test_deck_service.py  test_deck_version_model.py  test_game_model.py  test_game_registration_model.py  test_match_model.py  test_match_player_model.py  test_profile_service.py  test_user_model.py  test_user_schemas.py  test_user_service.py
(+59 files in other folders)
