[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magmon-backend"
version = "0.1.0"
# Add other metadata if desired, like description, authors, etc.
requires-python = ">=3.11"
# Dependencies are still primarily managed by requirements.txt for Docker build
# but listing main ones here can be good practice.
# dependencies = [
#     "Flask",
#     "SQLAlchemy",
#     # ... other core dependencies
# ]

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory (backend/)
include = ["app*"] # Include the 'app' package and its submodules
exclude = ["tests*"] # Exclude the 'tests' directory from the package itself